[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "fastapi template for oauth, db, prisma orm support"
authors = ["rudrodip <official.rudrodipsarker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "4.3.0"
asttokens = "2.4.1"
attrs = "23.2.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.5"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.8"
docopt = "0.6.2"
ecdsa = "0.19.0"
exceptiongroup = "1.2.1"
executing = "2.0.1"
fastapi = "0.110.2"
fastjsonschema = "2.19.1"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
inquirerpy = "0.3.4"
ipython = "8.12.3"
jedi = "0.19.1"
jinja2 = "3.1.3"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
jupyter-client = "8.6.1"
jupyter-core = "5.7.2"
jupyterlab-pygments = "0.3.0"
markupsafe = "2.1.5"
matplotlib-inline = "0.1.7"
mistune = "3.0.2"
multiprocess = "0.70.14"
nbclient = "0.10.0"
nbconvert = "7.16.3"
nbformat = "5.10.4"
nestd = "0.3.1"
nodeenv = "1.8.0"
orjson = "3.9.15"
packaging = "24.0"
pandocfilters = "1.5.1"
parso = "0.8.4"
pexpect = "4.9.0"
pfzy = "0.3.4"
pickleshare = "0.7.5"
platformdirs = "4.2.0"
prisma = "0.13.1"
prompt-toolkit = "3.0.43"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
pydantic-settings = "2.2.1"
pygments = "2.17.2"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
pyyaml = "6.0.1"
pyzmq = "26.0.1"
referencing = "0.34.0"
requests = "2.31.0"
rpds-py = "0.18.0"
rsa = "4.9"
rustimport = "1.3.4"
setuptools = "69.5.1"
six = "1.16.0"
sniffio = "1.3.1"
soupsieve = "2.5"
stack-data = "0.6.3"
starlette = "0.37.2"
strenum = "0.4.15"
tinycss2 = "1.2.1"
toml = "0.10.2"
tomlkit = "0.12.4"
tornado = "6.4"
traitlets = "5.14.3"
typing-extensions = "4.11.0"
urllib3 = "2.2.1"
uvicorn = "0.29.0"
uvloop = "0.19.0"
watchdog = "2.2.1"
watchfiles = "0.21.0"
wcwidth = "0.2.13"
webencodings = "0.5.1"
websockets = "12.0"
yarg = "0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
